force-app/main/default/objects/Lead/fields/Credit_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Name__c</fullName>
    <label>Credit Card Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>