force-app/main/default/objects/Lead/fields/Date_Received_by_Lab__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_by_Lab__c</fullName>
    <label>Date MBD Received by Lab</label>
    <type>Date</type>
</CustomField>