force-app/main/default/objects/Lead/fields/Date_Sent_by_Mother__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_by_Mother__c</fullName>
    <label>Date MBD Sent by Mother</label>
    <type>Date</type>
</CustomField>