force-app/main/default/objects/Lead/fields/DCS__c.field-meta.xml
<CustomField>
    <fullName>DCS__c</fullName>
    <inlineHelpText>Open and check the DCS to make sure that it is complete. The form should be completed entirely, but as long as the 2000ml question is answered and the lab has completed the bottom, this is sufficient.</inlineHelpText>
    <label>DCS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Collection at lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>