force-app/main/default/objects/Lead/fields/DCWNumber__c.field-meta.xml
<CustomField>
    <fullName>DCWNumber__c</fullName>
    <formula>if ( 
or ( 
LEFT(Phone,2)=&quot;(0&quot;, 
LEFT(Phone,4)=&quot;(123&quot;, 
LEFT(Phone,4)=&quot;(111&quot;, 
LEFT(Phone,4)=&quot;(222&quot;, 
LEFT(Phone,4)=&quot;(333&quot;, 
LEFT(Phone,4)=&quot;(444&quot;, 
LEFT(Phone,4)=&quot;(555&quot;, 
LEFT(Phone,4)=&quot;(666&quot;, 
LEFT(Phone,4)=&quot;(777&quot;, 
LEFT(Phone,4)=&quot;(888&quot;, 
LEFT(Phone,4)=&quot;(999&quot;, 
LEFT(Phone,1)=&quot;0&quot;, 
LEFT(Phone,3)=&quot;123&quot;, 
LEFT(Phone,3)=&quot;111&quot;, 
LEFT(Phone,3)=&quot;222&quot;, 
LEFT(Phone,3)=&quot;333&quot;, 
LEFT(Phone,3)=&quot;444&quot;, 
LEFT(Phone,3)=&quot;555&quot;, 
LEFT(Phone,3)=&quot;666&quot;, 
LEFT(Phone,3)=&quot;777&quot;, 
LEFT(Phone,3)=&quot;888&quot;, 
LEFT(Phone,3)=&quot;999&quot;, 
LEN(Phone)&lt;10), &quot;DCW#&quot;, 
&quot;&quot;)</formula>
    <inlineHelpText>Used to capture bad phone numbers, moved to Opportunity with mapping.</inlineHelpText>
    <label>DCW#</label>
    <type>Text</type>
</CustomField>