force-app/main/default/objects/Lead/fields/Dialpad__IsCreatedFromDialpad__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__IsCreatedFromDialpad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be set to true if the lead is created from Dialpad</description>
    <label>IsCreatedFromDialpad</label>
    <type>Checkbox</type>
</CustomField>