force-app/main/default/objects/Lead/fields/Dialpad__Powerdialer_Assigned_List__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Powerdialer_Assigned_List__c</fullName>
    <label>Powerdialer Assigned List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>