force-app/main/default/objects/Lead/fields/Dialpad__Powerdialer_Last_Dialed_via__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Powerdialer_Last_Dialed_via__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Dialpad LOAC record using which last call to the record was made.</description>
    <label>Powerdialer Last Dialed via</label>
    <referenceTo>Dialpad__Dialpad_LOAC__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>