force-app/main/default/objects/Lead/fields/Dialpad__Timezone__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Timezone__c</fullName>
    <label>Lead Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>