force-app/main/default/objects/Lead/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Maximum discount for cord blood $50, for cord blood &amp; cord tissue $100 and for cord blood, cord tissue and placenta tissue $150.  Additional discounts require prior approval.  Discounts should be adjusted after storage, if necessary.</inlineHelpText>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>