force-app/main/default/objects/Lead/fields/Discount_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discount_Comments__c</fullName>
    <label>Discount Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>