force-app/main/default/objects/Lead/fields/Discount_percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_percent__c</fullName>
    <description>Used primarily when offering discounts to companies when employees enroll.</description>
    <label>Discount %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>