force-app/main/default/objects/Lead/fields/Doctor_Fee__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Fee__c</fullName>
    <inlineHelpText>The maximum amount of doctor&apos;s referral fee is $200.</inlineHelpText>
    <label>Doctor Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>