force-app/main/default/objects/Lead/fields/Doctor_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_Email__c</fullName>
    <defaultValue>&quot;1&quot;&amp;$Organization.Fax&amp;&quot;@efaxsend.com&quot;</defaultValue>
    <description>Send Informed Consent forms to this email address for distribution via e-Fax to the doctor&apos;s offices. The email should be in the following format: 18888888888@efaxsend.com</description>
    <label>Doctor&apos;s Email</label>
    <type>Email</type>
</CustomField>