force-app/main/default/objects/Lead/fields/Doctor_s_Fax__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_Fax__c</fullName>
    <label>Doctor&apos;s Fax</label>
    <type>Phone</type>
</CustomField>