force-app/main/default/objects/Lead/fields/DocuSign_Comment__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Comment__c</fullName>
    <label>DocuSign Comment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>