force-app/main/default/objects/Lead/fields/Docusign_Status_new__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Status_new__c</fullName>
    <description>Pulls from the Docusign Recipient Status field.</description>
    <label>Docusign Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>