force-app/main/default/objects/Lead/fields/donation_reconsider__c.field-meta.xml
<CustomField>
    <fullName>donation_reconsider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for WTE survey</description>
    <label>donation reconsider</label>
    <type>Checkbox</type>
</CustomField>