force-app/main/default/objects/Lead/fields/Dup_Email2__c.field-meta.xml
<CustomField>
    <fullName>Dup_Email2__c</fullName>
    <description>Used by Opportunity to identify Alternative Email during dedupe process.</description>
    <label>Dup Email2</label>
    <type>Email</type>
</CustomField>