force-app/main/default/objects/Lead/fields/Ecomm_Dup_Created__c.field-meta.xml
<CustomField>
    <fullName>Ecomm_Dup_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent duplicate Ecomm Dups from being created because of Marketo Sync</description>
    <label>Ecomm Dup Created</label>
    <type>Checkbox</type>
</CustomField>