force-app/main/default/objects/Lead/fields/Ecomm_Lead_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Ecomm_Lead_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to track ecomm orders with timed workflow</inlineHelpText>
    <label>Ecomm Lead Relationship</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>