force-app/main/default/objects/Lead/fields/Enroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Date__c</fullName>
    <label>Enroll Date</label>
    <type>Date</type>
</CustomField>