force-app/main/default/objects/Lead/fields/Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Enrolled__c</fullName>
    <description>Indicates whether someone completed Step One, the entire enrollment process (indicated by &quot;Enrolled&quot;), or Cancelled.  Use &quot;Other&quot; for any other instance.</description>
    <label>Enrolled?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed Step One</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>