force-app/main/default/objects/Lead/fields/Enrolled_by_email__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_by_email__c</fullName>
    <label>Enrolled by email</label>
    <type>Email</type>
</CustomField>