force-app/main/default/objects/Lead/fields/Enrolled_by_first_name__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_by_first_name__c</fullName>
    <description>The person who completed the initial online enrollment form.</description>
    <label>Enrolled by first name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>