force-app/main/default/objects/Lead/fields/Enrolled_by_last_name__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_by_last_name__c</fullName>
    <label>Enrolled by last name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>