force-app/main/default/objects/Lead/fields/Enrolled_by_phone__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_by_phone__c</fullName>
    <label>Enrolled by phone</label>
    <type>Phone</type>
</CustomField>