force-app/main/default/objects/Lead/fields/Enrolled_Comments__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Comments__c</fullName>
    <label>Enrolled Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>