force-app/main/default/objects/Lead/fields/Enrollment_Forms_Completed__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Forms_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enrollment forms completed?</description>
    <label>Forms Signed</label>
    <type>Checkbox</type>
</CustomField>