force-app/main/default/objects/Lead/fields/Explain_Other__c.field-meta.xml
<CustomField>
    <fullName>Explain_Other__c</fullName>
    <description>Used when someone selects &quot;Other&quot; for question 	How did you learn about Americord, used on Ecomm</description>
    <label>Explain Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>