force-app/main/default/objects/Lead/fields/Father_s_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Date_of_Birth__c</fullName>
    <label>Father&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>