force-app/main/default/objects/Lead/fields/Father_s_Education__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Education__c</fullName>
    <label>Father&apos;s Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>