force-app/main/default/objects/Lead/fields/Father_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_s_First_Name__c</fullName>
    <label>Parent 2 First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>