force-app/main/default/objects/Lead/fields/Father_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Name__c</fullName>
    <label>Parent 2 Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>