force-app/main/default/objects/Lead/fields/Father_s_Profession__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Profession__c</fullName>
    <label>Father&apos;s Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>