force-app/main/default/objects/Lead/fields/Faxed_Informed_Consent_to_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Faxed_Informed_Consent_to_Doctor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Faxed a copy of the informed consent form to the OB.</description>
    <label>Faxed Consent</label>
    <type>Checkbox</type>
</CustomField>