force-app/main/default/objects/Lead/fields/FB_DD__c.field-meta.xml
<CustomField>
    <fullName>FB_DD__c</fullName>
    <inlineHelpText>Used to capture Facebook&apos;s Baby&apos;s Due Date, which is a text field.</inlineHelpText>
    <label>FB DD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>