force-app/main/default/objects/Lead/fields/FedEx_Trk__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Trk__c</fullName>
    <inlineHelpText>Enter the FedEx tracking number used to send the kit to the client</inlineHelpText>
    <label>FedEx Trk #</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>