force-app/main/default/objects/Lead/fields/Follow_up_Subject__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Subject__c</fullName>
    <label>Follow-up Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calling back for credit card</fullName>
            </value>
            <value>
                <fullName>Need to talk to husband</fullName>
            </value>
            <value>
                <fullName>Second trimester follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>