force-app/main/default/objects/Lead/fields/Forms__c.field-meta.xml
<CustomField>
    <fullName>Forms__c</fullName>
    <label>Forms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>