force-app/main/default/objects/Lead/fields/Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card__c</fullName>
    <label>Gift Card</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>