force-app/main/default/objects/Lead/fields/Gift_Card_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Amount__c</fullName>
    <description>Originally this was the Mother&apos;s day raffle gift card amount. Peter asked to change this to discount offered, so there is a designated field for this.</description>
    <label>Discount Amount</label>
    <length>12</length>
    <type>Text</type>
</CustomField>