force-app/main/default/objects/Lead/fields/Hospital_Address__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Address__c</fullName>
    <label>Hospital Address</label>
    <length>75</length>
    <type>Text</type>
</CustomField>