force-app/main/default/objects/Lead/fields/Hospital_City__c.field-meta.xml
<CustomField>
    <fullName>Hospital_City__c</fullName>
    <label>Hospital City</label>
    <type>TextArea</type>
</CustomField>