force-app/main/default/objects/Lead/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <label>Hospital Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>