force-app/main/default/objects/Lead/fields/Hospital_State__c.field-meta.xml
<CustomField>
    <fullName>Hospital_State__c</fullName>
    <label>Hospital State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>