force-app/main/default/objects/Lead/fields/How_did_you_hear_about_Americord__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Americord__c</fullName>
    <description>Used on ecomm</description>
    <label>How did you hear about Americord</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BabyCenter</fullName>
            </value>
            <value>
                <fullName>buybuyBaby</fullName>
            </value>
            <value>
                <fullName>Consumer Affairs</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>WhatToExpect</fullName>
            </value>
            <value>
                <fullName>Your Baby Club</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Returning Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>