force-app/main/default/objects/Lead/fields/how_did_you_learn_about_americord__c.field-meta.xml
<CustomField>
    <fullName>how_did_you_learn_about_americord__c</fullName>
    <description>Populated from Info Kit text box.</description>
    <label>How did you learn about Americord?</label>
    <type>TextArea</type>
</CustomField>