force-app/main/default/objects/Lead/fields/I_would_like_to_speak_with_a_Specialist__c.field-meta.xml
<CustomField>
    <fullName>I_would_like_to_speak_with_a_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I would like to speak with a Specialist</label>
    <type>Checkbox</type>
</CustomField>