force-app/main/default/objects/Lead/fields/Impact_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Impact_Partner_Id__c</fullName>
    <description>This is the partner id for the lead. This is also known as the mediaId and identifies leads that were obtained through a partner.</description>
    <inlineHelpText>This is the partner id for the lead. This is also known as the mediaId and identifies leads that were obtained through a partner.</inlineHelpText>
    <label>Impact Partner Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>