force-app/main/default/objects/Lead/fields/Incoming_Source__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Source__c</fullName>
    <label>Incoming Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Doctor&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>