force-app/main/default/objects/Lead/fields/Info_Kit__c.field-meta.xml
<CustomField>
    <fullName>Info_Kit__c</fullName>
    <description>Did this customer request an Information Kit from the website?</description>
    <label>Info Kit</label>
    <length>12</length>
    <type>Text</type>
</CustomField>