force-app/main/default/objects/Lead/fields/Info_Kit_Date__c.field-meta.xml
<CustomField>
    <fullName>Info_Kit_Date__c</fullName>
    <label>Info Kit Date</label>
    <type>Date</type>
</CustomField>