force-app/main/default/objects/Lead/fields/KISSM__c.field-meta.xml
<CustomField>
    <fullName>KISSM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked (True) = the lead was repeatedly engaging with our emails and website and is therefore a lead that should be followed up with. This data should be imported periodically from KISSMetrics.</description>
    <inlineHelpText>Checked (True) = the lead was repeatedly engaging with our emails and website and is therefore a lead that should be followed up with. This data should be imported periodically from KISSMetrics.</inlineHelpText>
    <label>KISSM</label>
    <type>Checkbox</type>
</CustomField>