force-app/main/default/objects/Lead/fields/knowledgeaboutcordbloodbanking__c.field-meta.xml
<CustomField>
    <fullName>knowledgeaboutcordbloodbanking__c</fullName>
    <description>Used for WTE Survey, Data comes from Marketo and maps to Opportunity and Account.</description>
    <label>Knowledge about cord blood banking</label>
    <length>40</length>
    <type>Text</type>
</CustomField>