force-app/main/default/objects/Lead/fields/Lab_Comment_for_Internal_Use_Only__c.field-meta.xml
<CustomField>
    <fullName>Lab_Comment_for_Internal_Use_Only__c</fullName>
    <description>This is for lab comments that will not be sent to the client.</description>
    <inlineHelpText>This is for lab comments that will not be sent to the client.</inlineHelpText>
    <label>Lab Comment for Internal Use Only</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>