force-app/main/default/objects/Lead/fields/Last_Visited_Enroll__c.field-meta.xml
<CustomField>
    <fullName>Last_Visited_Enroll__c</fullName>
    <description>Last time user start enrollment</description>
    <label>Last Visited Enroll</label>
    <type>DateTime</type>
</CustomField>