force-app/main/default/objects/Lead/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <label>Lead Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>Ovia</fullName>
            </value>
            <value>
                <fullName>Re-Up</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>