force-app/main/default/objects/Lead/fields/Lead_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Detail__c</fullName>
    <label>Lead Detail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>