force-app/main/default/objects/Lead/fields/Lead_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualification__c</fullName>
    <label>Lead Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cool</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>