force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>Used with Distribution Engine for lead assignment.</description>
    <formula>Lead_Qualification_new__c &amp;&quot; &quot;&amp; Trimester__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Type</label>
    <type>Text</type>
</CustomField>