force-app/main/default/objects/Lead/fields/LPI_CT__c.field-meta.xml
<CustomField>
    <fullName>LPI_CT__c</fullName>
    <description>Lab Product Identifier for Cord Tissue, 13 characters</description>
    <inlineHelpText>Lab Product Identifier for Cord Tissue, 13 characters</inlineHelpText>
    <label>LPI CT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>