force-app/main/default/objects/Lead/fields/Mailchimp_Import__c.field-meta.xml
<CustomField>
    <fullName>Mailchimp_Import__c</fullName>
    <description>Data imported from Mailchimp 03/08.</description>
    <label>Mailchimp Import</label>
    <length>10</length>
    <type>Text</type>
</CustomField>