force-app/main/default/objects/Lead/fields/Manual_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Manual_Time_Zone__c</fullName>
    <inlineHelpText>Used by Sales Reps to enter TIme Zone manually.</inlineHelpText>
    <label>Manual Time Zone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>