force-app/main/default/objects/Lead/fields/Maternal_Blood_Draw_FedEx_Tracing__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Blood_Draw_FedEx_Tracing__c</fullName>
    <label>MBD FedEx Tracing</label>
    <length>21</length>
    <type>Text</type>
</CustomField>