force-app/main/default/objects/Lead/fields/Maternal_Blood_Redraw__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Blood_Redraw__c</fullName>
    <description>4/3/12 MS: This field should be completed if the lab requests a replacement. If maternal blood tubes were missing, hemolyzed, or collection was not done according to the instructions in the DCS, &quot;Replacement Requested&quot; should be selected.</description>
    <inlineHelpText>This field should be completed if the lab requests a replacement maternal blood sample.</inlineHelpText>
    <label>Maternal Blood Redraw</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MBD Required (Lab)</fullName>
            </value>
            <value>
                <fullName>MBD Requested (AC)</fullName>
            </value>
            <value>
                <fullName>MBD Received (Lab)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>