force-app/main/default/objects/Lead/fields/Maternal_Form__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Maternal form has been received, checked and provided to the laboratory.</description>
    <label>Maternal Form</label>
    <type>Checkbox</type>
</CustomField>